[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Righteous-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="MainMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
alignment = 1

[node name="TopSpacerControl" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 95.0
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 1024.0
margin_bottom = 230.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "MoonExplorer!"
align = 1

[node name="MidSpacerControl" type="Control" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 1024.0
margin_bottom = 335.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 345.0
margin_right = 1024.0
margin_bottom = 494.0
alignment = 1

[node name="LeftSpacerControl" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 338.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 342.0
margin_right = 680.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="NewButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 338.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 2 )
text = "New"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 338.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 2 )
text = "Load"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 102.0
margin_right = 338.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="RightSpacerControl" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 149.0
size_flags_horizontal = 3

[node name="SpacerLabel2" type="Label" parent="VBoxContainer"]
margin_top = 504.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
align = 1
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
